tests/NormalTests/paczka2/big_fuzzy/91994619.err
Error in line 6: S708 A139 81,6
Error in line 5: 4TZ4NZxA4 S539 85,4
Error in line 4: BLo1Hx A601 93,8
Error in line 20: 4TZ4NZxA4 S708 342,09
Error in line 26: 4tovi1Gr A601 6,9
Error in line 18: 4TZ4NZxA4 S708 85,5
Error in line 36: BLo1Hx S708 23,50
Error in line 34: 4tovi1Gr A139 4,3
Error in line 13: BLo1Hx S708 15,2
Error in line 51: 8BCawJ A601 11,0
Error in line 58: 4TZ4NZxA4 S539 15,91
Error in line 57: BLo1Hx S539 85,7
Error in line 61: OyZIG A601 61,6
Error in line 70: EyrF A139 147,6
Error in line 63: BLo1Hx S708 48,1
Error in line 64: 4TZ4NZxA4 S539 18,9
Error in line 84: BLo1Hx S539 65,7
Error in line 104: 4TZ4NZxA4 A139 77,1
Error in line 107: 4TZ4NZxA4 S708 15,1
Error in line 108: 4TZ4NZxA4 A601 79,9
Error in line 118: BLo1Hx A139 9,8
Error in line 112: OyZIG S539 80,7
Error in line 95: 4tovi1Gr S708 74,0
Error in line 134: 4tovi1Gr A601 114,6
Error in line 137: 4tovi1Gr A139 87,7
Error in line 143: OyZIG A601 96,87
Error in line 138: OyZIG A139 98,2
Error in line 150: S708 S708 81,9
Error in line 144: 8BCawJ S708 88,4
Error in line 148: 4TZ4NZxA4 A601 76,3
Error in line 152: S708 A139 86,7
Error in line 156: BLo1Hx A601 91,6
Error in line 167: 4tovi1Gr S539 9,0
Error in line 175: BLo1Hx S708 29,2
Error in line 168: 4tovi1Gr S708 45,3
Error in line 186: 4tovi1Gr A601 82,4
Error in line 188: EyrF A601 18,1
Error in line 195: EyrF A139 367,65
Error in line 187: 4TZ4NZxA4 S539 96,3
Error in line 191: BLo1Hx A139 272,5
Error in line 199: OyZIG S539 40,1
Error in line 202: 4TZ4NZxA4 S708 37,7
Error in line 203: 8BCawJ S708 86,5
Error in line 206: 4TZ4NZxA4 A601 80,4
Error in line 205: OyZIG A601 460,7
Error in line 194: EyrF A139 99,6
Error in line 213: EyrF S708 40,2
Error in line 212: OyZIG S708 98,6
Error in line 227: BLo1Hx A6B1 51,5
Error in line 229: 8BCawJ S708 13,7
Error in line 240: 4TZ4NZxA4 A601 -2,1
Error in line 237: BLo1Hx A139 23,9
Error in line 231: 4tovi1Gr A139 31,1
Error in line 241: BLo1Hx A601 94,6
